# pointcloud_filter

./: CMakeLists.txt  package.xml
config/: BrickDistanceParameters.cfg  WallDetectionParameters.cfg  brick_distance_parameters.yaml  kalman_params.yaml  kalman_params_patch.yaml
include/: Global2Local.h  KalmanDetection.h  KalmanFilter.h  WallDetection.h  pc_pub_sub.h  pointcloud_filter.h
launch/: ch3_pointcloud_filter.launch  kopter_rs.launch  pointcloud_filter.launch  wall_detection.launch
src/: WallDetectionNode.cpp  main.cpp  pc_pub_sub.cpp  pointcloud_filter.cpp
