<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_filter</name>
  <version>0.0.0</version>
  <description>The gazebo_husky_pile_approach package</description>

  <maintainer email="a@todo.todo">a</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>


  <export>

  </export>
</package>
